# Teste

./: db.sqlite3  pyproject.toml
backend/: settings.py  urls.py
backend/core/: admin.py  router.py
backend/core/migrations/: 0001_initial.py  0002_auto_20210317_1825.py  0002_auto_20210320_0050.py  0002_auto_20210324_1427.py  0002_person.py  0003_auto_20210317_1830.py  0003_auto_20210321_0210.py  0004_auto_20210317_2247.py  0004_auto_20210321_1920.py  0005_auto_20210317_2257.py  0005_auto_20210322_0059.py  0006_auto_20210322_0139.py
backend/core/models/: __init__.py  person.py  stack.py  stackPerson.py  user.py
backend/core/serializers/: __init__.py  person.py  stack.py  stackPersons.py
backend/core/views/: __init__.py  person.py  stack.py
frontend/: nuxt.config.js  package-lock.json  package.json
frontend/assets/css/: main.css  main.scss
frontend/components/: FormRegister.vue  ListRegister.vue
frontend/layouts/: default.vue
frontend/pages/: editRegister.vue  index.vue  login.vue  stacks.vue  tecList.vue  tecRegister.vue
frontend/store/person/: index.js
frontend/store/stacks/: index.js
